Database bins suicide rate risks

--- a/ChoosingGraphSchema.ipynb
+++ b/ChoosingGraphSchema.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,42 @@
     }
    ],
    "source": [
-    "database.showInfo()\n",
+    "database.showInfo()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DatabaseManager' object has no attribute 'showUniqueNodesOfType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# The G.I. Generation doesn't have age categories for all groups\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# I don't know why but it feels like we should drop that so that\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# all generations have all age groups\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m database\u001b[39m.\u001b[39;49mshowUniqueNodesOfType(\u001b[39m'\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m database\u001b[39m.\u001b[39mcleanDatabase()\n\u001b[1;32m      6\u001b[0m database\u001b[39m.\u001b[39mshowUniqueNodesOfType(\u001b[39m'\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DatabaseManager' object has no attribute 'showUniqueNodesOfType'"
+     ]
+    }
+   ],
+   "source": [
+    "# The G.I. Generation doesn't have age categories for all groups\n",
+    "# I don't know why but it feels like we should drop that so that\n",
+    "# all generations have all age groups\n",
+    "database.showUniqueNodesOfType('generation')\n",
+    "database.cleanDatabase()\n",
+    "database.showUniqueNodesOfType('generation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "del database \n",
     "# I don't want to get confused later on in the notebook. \n",
     "# Deleting the database object will help keep small notebook blocks self contained.\n"
@@ -157,6 +192,33 @@
     " - 100-124\n",
     " - 125-149\n",
     " - 150-300 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique items in suicides_per_100k_bins are\n",
+      "0-25\n",
+      "25-75\n",
+      "150-300\n",
+      "125-150\n",
+      "100-125\n",
+      "75-100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Update the database and show the bins\n",
+    "from DatabaseManager import DatabaseManager # I don't know if it's good form to do this or not\n",
+    "database = DatabaseManager('datasets/suicide_rates_by_category.csv')\n",
+    "database.binCategory('suicides_per_100k',binlist = [0,25,75,100,125,150,300])\n",
+    "database.showUniqueNodesOfType('suicides_per_100k_bins')"
    ]
   }
  ],
