Extracting the graph works

--- a/ChoosingGraphSchema.ipynb
+++ b/ChoosingGraphSchema.ipynb
@@ -24,26 +24,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   country  year     sex          age  suicides_no  population  suicides_pop   \n",
-      "0  Albania  1987    male  15-24 years           21      312900          6.71  \\\n",
-      "1  Albania  1987    male  35-54 years           16      308000          5.19   \n",
-      "2  Albania  1987  female  15-24 years           14      289700          4.83   \n",
-      "3  Albania  1987    male    75+ years            1       21800          4.59   \n",
-      "4  Albania  1987    male  25-34 years            9      274300          3.28   \n",
+      "   country  year     sex          age  suicides_no  population   \n",
+      "0  Albania  1987    male  15-24 years           21      312900  \\\n",
+      "1  Albania  1987    male  35-54 years           16      308000   \n",
+      "2  Albania  1987  female  15-24 years           14      289700   \n",
+      "4  Albania  1987    male  25-34 years            9      274300   \n",
+      "6  Albania  1987  female  35-54 years            6      278800   \n",
       "\n",
-      "  country-year  HDI_for_year  gdp_for_year  gdp_per_capita       generation  \n",
-      "0  Albania1987           NaN    2156624900             796     Generation X  \n",
-      "1  Albania1987           NaN    2156624900             796           Silent  \n",
-      "2  Albania1987           NaN    2156624900             796     Generation X  \n",
-      "3  Albania1987           NaN    2156624900             796  G.I. Generation  \n",
-      "4  Albania1987           NaN    2156624900             796          Boomers  \n"
+      "   suicides_per_100k country-year  HDI_for_year  gdp_for_year  gdp_per_capita   \n",
+      "0               6.71  Albania1987           NaN    2156624900             796  \\\n",
+      "1               5.19  Albania1987           NaN    2156624900             796   \n",
+      "2               4.83  Albania1987           NaN    2156624900             796   \n",
+      "4               3.28  Albania1987           NaN    2156624900             796   \n",
+      "6               2.15  Albania1987           NaN    2156624900             796   \n",
+      "\n",
+      "     generation suicides_per_100k_bins  \n",
+      "0  Generation X                   0-25  \n",
+      "1        Silent                   0-25  \n",
+      "2  Generation X                   0-25  \n",
+      "4       Boomers                   0-25  \n",
+      "6        Silent                   0-25  \n"
      ]
     }
    ],
@@ -55,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,23 +70,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 27820 entries, 0 to 27819\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   country         27820 non-null  object \n",
-      " 1   year            27820 non-null  int64  \n",
-      " 2   sex             27820 non-null  object \n",
-      " 3   age             27820 non-null  object \n",
-      " 4   suicides_no     27820 non-null  int64  \n",
-      " 5   population      27820 non-null  int64  \n",
-      " 6   suicides_pop    27820 non-null  float64\n",
-      " 7   country-year    27820 non-null  object \n",
-      " 8   HDI_for_year    8364 non-null   float64\n",
-      " 9   gdp_for_year    27820 non-null  int64  \n",
-      " 10  gdp_per_capita  27820 non-null  int64  \n",
-      " 11  generation      27820 non-null  object \n",
-      "dtypes: float64(2), int64(5), object(5)\n",
+      "Index: 25076 entries, 0 to 27819\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                  Non-Null Count  Dtype   \n",
+      "---  ------                  --------------  -----   \n",
+      " 0   country                 25076 non-null  object  \n",
+      " 1   year                    25076 non-null  int64   \n",
+      " 2   sex                     25076 non-null  object  \n",
+      " 3   age                     25076 non-null  object  \n",
+      " 4   suicides_no             25076 non-null  int64   \n",
+      " 5   population              25076 non-null  int64   \n",
+      " 6   suicides_per_100k       25076 non-null  float64 \n",
+      " 7   country-year            25076 non-null  object  \n",
+      " 8   HDI_for_year            7738 non-null   float64 \n",
+      " 9   gdp_for_year            25076 non-null  int64   \n",
+      " 10  gdp_per_capita          25076 non-null  int64   \n",
+      " 11  generation              25076 non-null  object  \n",
+      " 12  suicides_per_100k_bins  25076 non-null  category\n",
+      "dtypes: category(1), float64(2), int64(5), object(5)\n",
       "memory usage: 2.5+ MB\n",
       "None\n"
      ]
@@ -91,18 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DatabaseManager' object has no attribute 'showUniqueNodesOfType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# The G.I. Generation doesn't have age categories for all groups\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m# I don't know why but it feels like we should drop that so that\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# all generations have all age groups\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m database\u001b[39m.\u001b[39;49mshowUniqueNodesOfType(\u001b[39m'\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m database\u001b[39m.\u001b[39mcleanDatabase()\n\u001b[1;32m      6\u001b[0m database\u001b[39m.\u001b[39mshowUniqueNodesOfType(\u001b[39m'\u001b[39m\u001b[39mgeneration\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DatabaseManager' object has no attribute 'showUniqueNodesOfType'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "generation\n",
+      "Generation X    6408\n",
+      "Silent          6364\n",
+      "Millenials      5844\n",
+      "Boomers         4990\n",
+      "Generation Z    1470\n",
+      "Name: count, dtype: int64\n",
+      "generation\n",
+      "Generation X    6408\n",
+      "Silent          6364\n",
+      "Millenials      5844\n",
+      "Boomers         4990\n",
+      "Generation Z    1470\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -117,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,20 +213,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique items in suicides_per_100k_bins are\n",
-      "0-25\n",
-      "25-75\n",
-      "150-300\n",
-      "125-150\n",
-      "100-125\n",
-      "75-100\n"
+      "suicides_per_100k_bins\n",
+      "0-25       21712\n",
+      "25-75       2959\n",
+      "75-100       317\n",
+      "100-125       60\n",
+      "125-150       14\n",
+      "150-300       14\n",
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -219,6 +237,60 @@
     "database = DatabaseManager('datasets/suicide_rates_by_category.csv')\n",
     "database.binCategory('suicides_per_100k',binlist = [0,25,75,100,125,150,300])\n",
     "database.showUniqueNodesOfType('suicides_per_100k_bins')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "I implemented the extraction of the database into a knowledge graph in GraphDatabaseManager.py. Here's a color coded graph, where the color indicates the type of node (see the graph schema above)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nx' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m graph_database \u001b[39m=\u001b[39m GraphManager(\u001b[39m'\u001b[39m\u001b[39mdatasets/suicide_rates_by_category.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m G \u001b[39m=\u001b[39m graph_database\u001b[39m.\u001b[39mgetGraph_of_Database()\n\u001b[0;32m----> 5\u001b[0m pos \u001b[39m=\u001b[39m nx\u001b[39m.\u001b[39mnx_agraph\u001b[39m.\u001b[39mgraphviz_layout(G,prog\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mneato\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m color_map \u001b[39m=\u001b[39m graph_database\u001b[39m.\u001b[39mgetColormap_by_Nodetype()\n\u001b[1;32m      7\u001b[0m plt\u001b[39m.\u001b[39mfigure(\u001b[39m1\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nx' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract a knowledge graph\n",
+    "from GraphDatabaseManager import GraphManager\n",
+    "import networkx as nx\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "graph_database = GraphManager('datasets/suicide_rates_by_category.csv')\n",
+    "G = graph_database.getGraph_of_Database()\n",
+    "pos = nx.nx_agraph.graphviz_layout(G,prog='neato')\n",
+    "color_map = graph_database.getColormap_by_Nodetype()\n",
+    "plt.figure(1)\n",
+    "nx.draw_networkx(G,pos,node_color = color_map, alpha = 0.8, node_size = 40, with_labels = False)\n",
+    "ax = plt.gca()\n",
+    "age_line, = ax.plot(-np.inf,-np.inf,'y.',markersize = 10)\n",
+    "age_line.set_label('age')\n",
+    "year_line, = ax.plot(-np.inf,-np.inf,'m.',markersize = 10)\n",
+    "year_line.set_label('year')\n",
+    "sex_line, = ax.plot(-np.inf,-np.inf,'g.',markersize = 10)\n",
+    "sex_line.set_label('sex')\n",
+    "country_line, = ax.plot(-np.inf,-np.inf,'c.',markersize = 10)\n",
+    "country_line.set_label('country')\n",
+    "rate_line, = ax.plot(-np.inf,-np.inf,'b.',markersize = 10)\n",
+    "rate_line.set_label('suicide bin')\n",
+    "ax.legend()\n",
+    "plt.show()    "
    ]
   }
  ],
